# jobtrack-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/add-eval-row/: SKILL.md
.claude/skills/edit-proposal-model/: SKILL.md
evals/: README.md  add_row.py  adversarial.jsonl  dataset.jsonl  run.py
evals/results/: 2026-05-12T14-20-29Z.json  2026-05-12T14-36-53Z.json  2026-05-12T14-48-21Z.json  2026-05-12T15-02-28Z.json  2026-05-12T15-22-23Z.json  2026-05-12T15-26-19Z.json  2026-05-12T15-58-50Z.json  2026-05-12T16-16-55Z.json  2026-05-12T16-38-38Z.json  2026-05-12T16-53-30Z.json  2026-05-12T20-21-10Z.json
samples/emails/: interview-01.eml  rejection-01.eml
src/agent/: audit.py  gating.py  loop.py  mcp_client.py  models.py  sanitize.py  writer.py
tests/: test_audit.py  test_gating.py  test_loop.py  test_models.py  test_sanitize.py  test_writer.py
